tests/machine/x/zig/len_map.error
Error on line 4: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/len_map.zig:4:234: error: expected ',' after initializer

3: pub fn main() void {
4:     std.debug.print("{any}\n", .{blk0: { var m = std.AutoHashMap([]const u8, i32).init(std.heap.page_allocator); m.put("a", @as(i32,@intCast(1))) catch unreachable; m.put("b", @as(i32,@intCast(2))) catch unreachable; break :blk0 m; }.count()});
5: }
